Added Test cases using mockito, Integrated Sonar and jacoco for code checks and reports